@@ -31,7 +31,7 @@ to run TAO on:<P>
 <table width="100%" border=1>
   <tr valign=top>
     <td><b>Fully supported, i.e., continually tested and used daily</b></td>
-    <td>Solaris 7, 8 and 9, Windows 2000/XP (6.x, and 7.1 and
+    <td>Solaris 7, 8 and 9, Windows 2000/XP (7.1, and 8.0 and
         Borland C++ Builder 6/2006), and Linux/Intel (Redhat,
         Debian and SuSe), Linux/Alpha (SuSe), VxWorks 5.5.1
     </td>
@@ -103,8 +103,8 @@ bundle as a single piece instead of trying to mix and match things up.<P>
   <LI>Build and install the TAO release under <CODE>$TAO_ROOT</CODE>.
         <P> TAO also uses GNUmakefiles and project files generated
         from MPC to compile. The beta or the release distribution will
-        come with stock GNUmakefiles, project files (for VC6 and VC
-        7.1) and Borland makefiles which were all generated by
+        come with stock GNUmakefiles, project files (for VC7.1 and VC
+        8) and Borland makefiles which were all generated by
         MPC. </P>
 
         <P>The easiest and recommended way to compile the
@@ -137,13 +137,13 @@ bundle as a single piece instead of trying to mix and match things up.<P>
           following (1) Unpack the distribution from DOC group's
           website. (2) Set the environment variables $ACE_ROOT and
           $TAO_ROOT. (3) Create config.h and platform_macros.GNU at
-          the right places (4) Delete all the GNUmakefiles (or dsp and
-          dsw file as the case may be) from the TAO distrbution using
+          the right places (4) Delete all the GNUmakefiles (or sln and
+          vproj file as the case may be) from the TAO distrbution using
           the 'find' command. (5) Change directory to $TAO_ROOT. (6)
           Run MPC like this, $ACE_ROOT/bin/mwc.pl TAO_ACE.mwc. (7) Run
           'make'. This will create all the required libraries for TAO
-          and TAO orbsvcs. In step 6, use -type vc6 if you want to
-          generate VC6 project and workspace files for Win32. Please
+          and TAO orbsvcs. In step 6, use -type vc71 if you want to
+          generate VC71 project and workspace files for Win32. Please
           see <A href="../MPC/USAGE"> MPC USAGE </A> document for
           details on how to generate build files for other compilers
           and tools.</P>
@@ -357,10 +357,10 @@ installation notes</A> or the <code>TAO_ROOT</code> environment variable.
 Remember to <a href="../ACE-INSTALL.html">set
 up ACE</A> before building TAO.
 
-<H4>Visual C++ 6.0</H4>
+<H4>Visual C++ 7.1 and newer</H4>
 
 <P>It works best if TAO is placed in ACE_wrappers so TAO ends up in
-<CODE>ACE_wrappers\TAO</CODE> because the Visual C++ 6 Project files
+<CODE>ACE_wrappers\TAO</CODE> because the Visual C++ 7.1 Project files
 are setup up to work in this configuration. If you move it, then make
 sure you regenerate the project files to look for the include and
 library files in the correct place. The default place for placing the
@@ -369,7 +369,7 @@ href="../bin/MakeProjectCreator/config/acedefaults.mpb"> this base
 project </a> file.</P>
 
 <OL>
-  <LI>Make sure ACE is built (For Visual C++ 6.0, use ACE.dsw). <P>
+  <LI>Make sure ACE is built (For Visual C++ 7.1, use ACE.sln). <P>
 
   <LI>First make sure <CODE>ACE_wrappers\bin</CODE> is listed in the Executable
       Directories in Tools|Options.  This is needed if using the TAO_IDL
@@ -527,18 +527,18 @@ quickly.
   commands:<p>
     <CODE> $ACE_ROOT/bin/mwc.pl TAO.mwc </CODE> <p>
    from <CODE> $TAO_ROOT </CODE> to generate GNUmakefiles. Use <CODE>
-  -type vc6 </CODE> or <CODE>-type vc71</CODE> to generate VC6 and
-  VC71 project and solution files.<p>
+  -type vc71 </CODE> or <CODE>-type vc8</CODE> to generate VC71 and
+  VC8 project and solution files.<p>
    <LI> Build ACE+TAO together in one shot. To do that please issue
   the following commands: <p>
   <CODE> $ACE_ROOT/bin/mwc.pl TAO_ACE.mwc </CODE> <p>
    from <CODE>$TAO_ROOT</CODE>. This will generate GNUmakefiles for
   ACE, gperf, and core ACE+TAO libraries. Issuing a
   <CODE>'make'</CODE> from <CODE>$TAO_ROOT </CODE> will build all of
-  the above in one shot. You can use <CODE> -type vc6 </CODE> to
-  generate VC6 project and workspace files. <CODE>TAO_ACE.dsw</CODE>
+  the above in one shot. You can use <CODE> -type vc71 </CODE> to
+  generate VC71 project and workspace files. <CODE>TAO_ACE.sln</CODE>
   can be used by users to build ACE+TAO from a single workspace
-  file. Users can use <CODE> -type vc71 </CODE> to generate the VC71
+  file. Users can use <CODE> -type vc8 </CODE> to generate the VC8
   solutions files. <p>
   </UL>
   <LI>If you want to build CIAO and its associated libraries
